feat: add basic html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -12,11 +12,21 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <div class="header__container">
-            </div>
         </header>
         <main class="main">
+            <section class="offer">
+                <div class="offer__container">
+                    <div class="offer__content">
+                        <h1 class="offer__title">Iphone 14 Pro</h1>
+                        <div class="offer__image image-offer">
+                            <img class="image-offer__item" src="assets/offer/iphone-14-pro.png" alt="Iphone 14 Pro">
+                        </div>
+                        <a class="offer__button" href="№">Выбрать</a>
+                    </div>
+                </div>
+            </section>
         </main>
+        <footer class="footer"></footer>
     </div>
 </body>
 
