--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
             </section>
         </main>
-        <footer class="footer"></footer>
+        <footer class="footer">Я футер</footer>
     </div>
 </body>
 
