--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <div class="offer__image image-offer">
                             <img class="image-offer__item" src="assets/offer/iphone-14-pro.png" alt="Iphone 14 Pro">
                         </div>
-                        <a class="offer__button" href="№">Выбрать</a>
+                        <a class="offer__button" href="#">Выбрать</a>
                     </div>
                 </div>
             </section>
