feat: finish whats-new html

--- a/index.html
+++ b/index.html
@@ -19,9 +19,48 @@
                     <div class="offer__content">
                         <h1 class="offer__title">Iphone 14 Pro</h1>
                         <div class="offer__image image-offer">
-                            <img class="image-offer__item" src="assets/offer/iphone-14-pro.png" alt="Iphone 14 Pro">
+                            <img class="image-offer__item" src="assets/offer/iphone-14-pro-gallery.png"
+                                alt="iphone-14-pro-gallery">
                         </div>
                         <a class="offer__button" href="#">Выбрать</a>
+                    </div>
+                </div>
+            </section>
+            <section class="whats-new">
+                <div class="whats-new__container">
+                    <div class="whats-new__content">
+                        <h2 class="whats-new__title titles">Что нового</h2>
+                        <div class="whats-new__body">
+                            <div class="whats-new__image">
+                                <img class="whats-new__item" src="assets/whats-new/apple-iphone-14-pro-max.jpg"
+                                    alt="apple-iphone-14-pro-max">
+                            </div>
+                            <div class="whats-new__info">
+                                <p class="whats-new__text">Все модели оснащены однокристальной системой A16 Bionic,
+                                    48-мегапиксельной основной камерой и экранами ProMotion с защитой Ceramic Shield и
+                                    частотным диапазоном 1 — 120 Гц, а также ускоренной памятью LPDDR5. Дизайн линейки
+                                    обновлен, на фронтальной панели смартфонов два выреза. </p>
+                                <p class="whats-new__text">Все iPhone 14 в США будут продаваться без лотка для SIM-карт:
+                                    производитель заявляет, что улучшенная технология eSIM позволит перенести старые
+                                    электронные сим-карты на новые смартфоны.</p>
+                                <p class="whats-new__text">Обновлены фронтальная камера (она снабжена автофокусом и
+                                    быстрее распознает пользователя в условиях недостаточной освещенности) и сенсор
+                                    основной камеры.
+                                </p>
+                                <p class="whats-new__text whats-new__text_bold">iPhone 14 Pro вышел в новом дизайне —
+                                    без фирменной «челки». Также в ассортименте появился новый цвет. В смартфоне, в
+                                    отличие от «обычных» 14-х айфонов, установлен процессор A16 Bionic, который может за
+                                    секунду производить 4 трлн операций с фото.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="color">
+                <div class="color__container">
+                    <div class="color__content">
+
                     </div>
                 </div>
             </section>
