feat: start choose-your-color html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <header class="header">
         </header>
         <main class="main">
+            <!-- в процессе -->
             <section class="offer">
                 <div class="offer__container">
                     <div class="offer__content">
@@ -26,11 +27,13 @@
                     </div>
                 </div>
             </section>
+            <!-- в процессе -->
             <section class="whats-new">
                 <div class="whats-new__container">
                     <div class="whats-new__content">
                         <h2 class="whats-new__title titles">Что нового</h2>
                         <div class="whats-new__body">
+
 
                             <div class="whats-new__info">
                                 <p class="whats-new__text">Все модели оснащены однокристальной системой A16 Bionic,
@@ -58,10 +61,18 @@
                     </div>
                 </div>
             </section>
-            <section class="color">
-                <div class="color__container">
-                    <div class="color__content">
-
+            <!-- в процессе -->
+            <section class="choose-your-color">
+                <div class="choose-your-color__container">
+                    <div class="choose-your-color__content">
+                        <h2 class="choose-your-color__title titles">Выбери свой цвет</h2>
+                    </div>
+                    <div class="choose-your-color__items">
+                        <div class="choose-your-color__item">
+                            <div class="item-choose-your-color">
+                                <div class="item-choose-your-color__image"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
