fix: change offer flex

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <div class="offer__container">
                     <div class="offer__content">
                         <h1 class="offer__title">Iphone 14 Pro</h1>
-                        <div class="offer__image image-offer">
-                            <img class="image-offer__item" src="assets/offer/iphone-14-pro-gallery.png"
+                        <div class="offer__image">
+                            <img class="offer__img" src="assets/offer/iphone-14-pro-gallery.png"
                                 alt="iphone-14-pro-gallery">
                         </div>
                         <a class="offer__button" href="#">Выбрать</a>
