fix: improve whats-new section flex

--- a/index.html
+++ b/index.html
@@ -33,43 +33,39 @@
                     <div class="whats-new__content">
                         <h2 class="whats-new__title titles">Что нового</h2>
                         <div class="whats-new__row">
-                            <div class="whats-new__left">
-                                <div class="whats-new__body">
-                                    <p class="whats-new__text">Все модели оснащены однокристальной системой A16 Bionic,
-                                        48-мегапиксельной основной камерой и экранами ProMotion с защитой Ceramic Shield
-                                        и
-                                        частотным диапазоном 1 — 120 Гц, а также ускоренной памятью LPDDR5. Дизайн
-                                        линейки
-                                        обновлен, на фронтальной панели смартфонов два выреза. </p>
-                                    <p class="whats-new__text">Все iPhone 14 в США будут продаваться без лотка для
-                                        SIM-карт:
-                                        производитель заявляет, что улучшенная технология eSIM позволит перенести старые
-                                        электронные сим-карты на новые смартфоны.</p>
-                                    <p class="whats-new__text">Обновлены фронтальная камера (она снабжена автофокусом и
-                                        быстрее распознает пользователя в условиях недостаточной освещенности) и сенсор
-                                        основной камеры.
-                                    </p>
-                                    <p class="whats-new__text whats-new__text_bold">iPhone 14 Pro вышел в новом дизайне
-                                        —
-                                        без фирменной «челки». Также в ассортименте появился новый цвет. В смартфоне, в
-                                        отличие от «обычных» 14-х айфонов, установлен процессор A16 Bionic, который
-                                        может за
-                                        секунду производить 4 трлн операций с фото.
-                                    </p>
-                                </div>
+                            <div class="whats-new__body">
+                                <p class="whats-new__text">Все модели оснащены однокристальной системой A16 Bionic,
+                                    48-мегапиксельной основной камерой и экранами ProMotion с защитой Ceramic Shield
+                                    и
+                                    частотным диапазоном 1 — 120 Гц, а также ускоренной памятью LPDDR5. Дизайн
+                                    линейки
+                                    обновлен, на фронтальной панели смартфонов два выреза. </p>
+                                <p class="whats-new__text">Все iPhone 14 в США будут продаваться без лотка для
+                                    SIM-карт:
+                                    производитель заявляет, что улучшенная технология eSIM позволит перенести старые
+                                    электронные сим-карты на новые смартфоны.</p>
+                                <p class="whats-new__text">Обновлены фронтальная камера (она снабжена автофокусом и
+                                    быстрее распознает пользователя в условиях недостаточной освещенности) и сенсор
+                                    основной камеры.
+                                </p>
+                                <p class="whats-new__text whats-new__text_bold">iPhone 14 Pro вышел в новом дизайне
+                                    —
+                                    без фирменной «челки». Также в ассортименте появился новый цвет. В смартфоне, в
+                                    отличие от «обычных» 14-х айфонов, установлен процессор A16 Bionic, который
+                                    может за
+                                    секунду производить 4 трлн операций с фото.
+                                </p>
                             </div>
-                            <div class="whats-new__right">
-                                <div class="whats-new__image">
-                                    <img class="whats-new__img" src="assets/whats-new/apple-iphone-14-pro-max.jpg"
-                                        alt="apple-iphone-14-pro-max">
-                                </div>
+                            <div class="whats-new__image">
+                                <img class="whats-new__img" src="assets/whats-new/apple-iphone-14-pro-max.jpg"
+                                    alt="apple-iphone-14-pro-max">
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
             <!-- в процессе -->
-            <section class="choose-your-color">
+            <!-- <section class="choose-your-color">
                 <div class="choose-your-color__container">
                     <div class="choose-your-color__content">
                         <h2 class="choose-your-color__title titles">Выбери свой цвет</h2>
@@ -82,7 +78,8 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
+            section.
         </main>
         <footer class="footer">Я футер</footer>
     </div>
