refactor: move files and rename classes

--- a/index.html
+++ b/index.html
@@ -14,41 +14,38 @@
         <header class="header">
         </header>
         <main class="main">
-            <!-- в процессе -->
             <section class="offer">
                 <div class="offer__container">
                     <div class="offer__content">
                         <h1 class="offer__title">Iphone 14 Pro</h1>
                         <div class="offer__image">
-                            <img class="offer__img" src="assets/offer/iphone-14-pro-gallery.png"
-                                alt="iphone-14-pro-gallery">
+                            <img class="offer__img" src="assets/offer/img/iphones.png" alt="iphones">
                         </div>
                         <a class="offer__button" href="#">Выбрать</a>
                     </div>
                 </div>
             </section>
-            <!-- в процессе -->
-            <section class="whats-new">
-                <div class="whats-new__container">
-                    <div class="whats-new__content">
-                        <h2 class="whats-new__title titles">Что нового</h2>
-                        <div class="whats-new__row">
-                            <div class="whats-new__body">
-                                <p class="whats-new__text">Все модели оснащены однокристальной системой A16 Bionic,
+            <section class="about">
+                <div class="about__container">
+                    <div class="about__content">
+                        <h2 class="about__title titles">Что нового</h2>
+                        <div class="about__row">
+                            <div class="about__body">
+                                <p class="about__text">Все модели оснащены однокристальной системой A16 Bionic,
                                     48-мегапиксельной основной камерой и экранами ProMotion с защитой Ceramic Shield
                                     и
                                     частотным диапазоном 1 — 120 Гц, а также ускоренной памятью LPDDR5. Дизайн
                                     линейки
                                     обновлен, на фронтальной панели смартфонов два выреза. </p>
-                                <p class="whats-new__text">Все iPhone 14 в США будут продаваться без лотка для
+                                <p class="about__text">Все iPhone 14 в США будут продаваться без лотка для
                                     SIM-карт:
                                     производитель заявляет, что улучшенная технология eSIM позволит перенести старые
                                     электронные сим-карты на новые смартфоны.</p>
-                                <p class="whats-new__text">Обновлены фронтальная камера (она снабжена автофокусом и
+                                <p class="about__text">Обновлены фронтальная камера (она снабжена автофокусом и
                                     быстрее распознает пользователя в условиях недостаточной освещенности) и сенсор
                                     основной камеры.
                                 </p>
-                                <p class="whats-new__text whats-new__text_bold">iPhone 14 Pro вышел в новом дизайне
+                                <p class="about__text about__text_bold">iPhone 14 Pro вышел в новом дизайне
                                     —
                                     без фирменной «челки». Также в ассортименте появился новый цвет. В смартфоне, в
                                     отличие от «обычных» 14-х айфонов, установлен процессор A16 Bionic, который
@@ -56,9 +53,8 @@
                                     секунду производить 4 трлн операций с фото.
                                 </p>
                             </div>
-                            <div class="whats-new__image">
-                                <img class="whats-new__img" src="assets/whats-new/apple-iphone-14-pro-max.jpg"
-                                    alt="apple-iphone-14-pro-max">
+                            <div class="about__image">
+                                <img class="about__img" src="assets/about/img/iphone.jpg" alt="iphone">
                             </div>
                         </div>
                     </div>
@@ -79,7 +75,17 @@
                     </div>
                 </div>
             </section> -->
-            section.
+            <section class="order"></section>
+            <div class="order__container">
+                <div class="order__content">
+                    <form class="order__form form" action="#" enctype="multipart/form-data">
+
+                    </form>
+                    <div class="order__image">
+                        <img class="order__img" src="" alt="">
+                    </div>
+                </div>
+            </div>
         </main>
         <footer class="footer">Я футер</footer>
     </div>
