fix: improve about flex

--- a/index.html
+++ b/index.html
@@ -30,31 +30,35 @@
                     <div class="about__content">
                         <h2 class="about__title titles">Что нового</h2>
                         <div class="about__row">
-                            <div class="about__body">
-                                <p class="about__text">Все модели оснащены однокристальной системой A16 Bionic,
-                                    48-мегапиксельной основной камерой и экранами ProMotion с защитой Ceramic Shield
-                                    и
-                                    частотным диапазоном 1 — 120 Гц, а также ускоренной памятью LPDDR5. Дизайн
-                                    линейки
-                                    обновлен, на фронтальной панели смартфонов два выреза. </p>
-                                <p class="about__text">Все iPhone 14 в США будут продаваться без лотка для
-                                    SIM-карт:
-                                    производитель заявляет, что улучшенная технология eSIM позволит перенести старые
-                                    электронные сим-карты на новые смартфоны.</p>
-                                <p class="about__text">Обновлены фронтальная камера (она снабжена автофокусом и
-                                    быстрее распознает пользователя в условиях недостаточной освещенности) и сенсор
-                                    основной камеры.
-                                </p>
-                                <p class="about__text about__text_bold">iPhone 14 Pro вышел в новом дизайне
-                                    —
-                                    без фирменной «челки». Также в ассортименте появился новый цвет. В смартфоне, в
-                                    отличие от «обычных» 14-х айфонов, установлен процессор A16 Bionic, который
-                                    может за
-                                    секунду производить 4 трлн операций с фото.
-                                </p>
+                            <div class="about__left">
+                                <div class="about__body">
+                                    <p class="about__text">Все модели оснащены однокристальной системой A16 Bionic,
+                                        48-мегапиксельной основной камерой и экранами ProMotion с защитой Ceramic Shield
+                                        и
+                                        частотным диапазоном 1 — 120 Гц, а также ускоренной памятью LPDDR5. Дизайн
+                                        линейки
+                                        обновлен, на фронтальной панели смартфонов два выреза. </p>
+                                    <p class="about__text">Все iPhone 14 в США будут продаваться без лотка для
+                                        SIM-карт:
+                                        производитель заявляет, что улучшенная технология eSIM позволит перенести старые
+                                        электронные сим-карты на новые смартфоны.</p>
+                                    <p class="about__text">Обновлены фронтальная камера (она снабжена автофокусом и
+                                        быстрее распознает пользователя в условиях недостаточной освещенности) и сенсор
+                                        основной камеры.
+                                    </p>
+                                    <p class="about__text about__text_bold">iPhone 14 Pro вышел в новом дизайне
+                                        —
+                                        без фирменной «челки». Также в ассортименте появился новый цвет. В смартфоне, в
+                                        отличие от «обычных» 14-х айфонов, установлен процессор A16 Bionic, который
+                                        может за
+                                        секунду производить 4 трлн операций с фото.
+                                    </p>
+                                </div>
                             </div>
-                            <div class="about__image">
-                                <img class="about__img" src="assets/about/img/iphone.jpg" alt="iphone">
+                            <div class="about__right">
+                                <div class="about__image">
+                                    <img class="about__img" src="assets/about/img/iphone.jpg" alt="iphone">
+                                </div>
                             </div>
                         </div>
                     </div>
