feat: finish order section html

--- a/index.html
+++ b/index.html
@@ -65,31 +65,42 @@
                 </div>
             </section>
             <!-- в процессе -->
-            <!-- <section class="choose-your-color">
-                <div class="choose-your-color__container">
-                    <div class="choose-your-color__content">
-                        <h2 class="choose-your-color__title titles">Выбери свой цвет</h2>
+            <!-- <section class="colors">
+                <div class="colors__container">
+                    <div class="colors__content">
+                        <h2 class="colors__title titles">Выбери свой цвет</h2>
                     </div>
-                    <div class="choose-your-color__items">
-                        <div class="choose-your-color__item">
-                            <div class="item-choose-your-color">
-                                <div class="item-choose-your-color__image"></div>
+                    <div class="colors__items">
+                        <div class="colors__item">
+                            <div class="item-colors">
+                                <div class="item-colors__image"></div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section> -->
-            <section class="order"></section>
-            <div class="order__container">
-                <div class="order__content">
-                    <form class="order__form form" action="#" enctype="multipart/form-data">
-
-                    </form>
-                    <div class="order__image">
-                        <img class="order__img" src="" alt="">
+            <section class="order">
+                <div class="order__container">
+                    <div class="order__content">
+                        <form class="order__form form" action="#" method="get" enctype="multipart/form-data">
+                            <h2 class="form__title titles">Хочешь Iphone 14 Pro?</h2>
+                            <div class="form__item">
+                                <input class="form__input" tabindex="1" autocomplete="off" placeholder="Ваше имя"
+                                    name="name" value="" type="text">
+                            </div>
+                            <div class="form__item">
+                                <input class="form__input" tabindex="2" autocomplete="off" placeholder="Номер телефона"
+                                    name="phone" value="" type="tel">
+                            </div>
+                            <p class="form__info">В ближайшее время наш менеджер свяжется с Вами</p>
+                            <button class="form__button">Заказать</button>
+                        </form>
+                        <div class="order__image">
+                            <img class="order__img" src="assets/order/img/iphone.jpg" alt="iphone">
+                        </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </main>
         <footer class="footer">Я футер</footer>
     </div>
