feat: finish order css

--- a/index.html
+++ b/index.html
@@ -84,16 +84,18 @@
                     <div class="order__content">
                         <form class="order__form form" action="#" method="get" enctype="multipart/form-data">
                             <h2 class="form__title titles">Хочешь Iphone 14 Pro?</h2>
-                            <div class="form__item">
-                                <input class="form__input" tabindex="1" autocomplete="off" placeholder="Ваше имя"
-                                    name="name" value="" type="text">
+                            <div class="form__body">
+                                <div class="form__item">
+                                    <input class="form__input" tabindex="1" autocomplete="off" placeholder="Ваше имя"
+                                        name="name" value="" type="text">
+                                </div>
+                                <div class="form__item">
+                                    <input class="form__input" tabindex="2" autocomplete="off"
+                                        placeholder="Номер телефона" name="phone" value="" type="tel">
+                                </div>
+                                <p class="form__info">В ближайшее время наш менеджер свяжется с Вами</p>
                             </div>
-                            <div class="form__item">
-                                <input class="form__input" tabindex="2" autocomplete="off" placeholder="Номер телефона"
-                                    name="phone" value="" type="tel">
-                            </div>
-                            <p class="form__info">В ближайшее время наш менеджер свяжется с Вами</p>
-                            <button class="form__button">Заказать</button>
+                            <button class="form__button" tabindex="3" type="submit">Заказать</button>
                         </form>
                         <div class="order__image">
                             <img class="order__img" src="assets/order/img/iphone.jpg" alt="iphone">
