feat: finish colors html

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                     </div>
                 </div>
             </section>
-            <!-- в процессе -->
-            <!-- <section class="colors">
+            <section class="colors">
                 <div class="colors__container">
                     <div class="colors__content">
                         <h2 class="colors__title titles">Выбери свой цвет</h2>
@@ -73,12 +72,51 @@
                     <div class="colors__items">
                         <div class="colors__item">
                             <div class="item-colors">
-                                <div class="item-colors__image"></div>
+                                <a class="item-colors__image _ibg" href="#">
+                                    <img class="item-colors__img" src="assets/colors/img/silver.jpg" alt="silver">
+                                </a>
+                                <div class="item-colors__body">
+                                    <a class="item-color__title" href="#">Silver</a>
+                                    <p class="item-colors__info">Серебристый</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="colors__item">
+                            <div class="item-colors">
+                                <a class="item-colors__image _ibg" href="#">
+                                    <img class="item-colors__img" src="assets/colors/img/purple.jpg" alt="purple">
+                                </a>
+                                <div class="item-colors__body">
+                                    <a class="item-color__title" href="#">Deep purple</a>
+                                    <p class="item-colors__info">Темно фиолетовый</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="colors__item">
+                            <div class="item-colors">
+                                <a class="item-colors__image _ibg" href="#">
+                                    <img class="item-colors__img" src="assets/colors/img/gold.jpg" alt="gold">
+                                </a>
+                                <div class="item-colors__body">
+                                    <a class="item-color__title" href="#">Gold</a>
+                                    <p class="item-colors__info">Золотой</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="colors__item">
+                            <div class="item-colors">
+                                <a class="item-colors__image _ibg" href="#">
+                                    <img class="item-colors__img" src="assets/colors/img/black.jpg" alt="black">
+                                </a>
+                                <div class="item-colors__body">
+                                    <a class="item-color__title" href="#">Space Black</a>
+                                    <p class="item-colors__info">Космический черный</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section> -->
+            </section>
             <section class="order">
                 <div class="order__container">
                     <div class="order__content">
